--- a/src/global.css
+++ b/src/global.css
@@ -13,7 +13,7 @@ html {
   --secondary: #0072ce;
 
   background-color: var(--bg);
-  color: var(--fg);
+  color: var(--bg);
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
   line-height: 1.3;
